test/Runner/errors/tests/Test.seedconf2.js
mi("Suite", () => {
	seed('Seed', () => {

	}, "foo");
});